# src_platform_userd

./: AUTHORS  CHANGELOG  Makefile.in  README.md  configure  configure.in
doc/: Makefile.in  doxyfile_html
man/: Makefile.in  userclt.pod  userd.pod
src/: Makefile.in  client.c  cmd.c  cmd.h  cryptpasswd.c  pam_check.c  pam_check.h  pkcs11.h  pkcs11_ops.c  pkcs11_ops.h  pkcs11g.h  pkcs11i.h  pkcs11n.h  server.c  test_fork_exec.c  user_client.c  user_server.c  user_server_aux.c  user_server_aux.h  userd.h  userd_create_ssh_keys  userd_delete_ssh_keys  userd_key_helper  userd_priv.h
