dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/server.c)

dnl Checks for programs.
AC_PROG_CC

[
if test "x$GCC" = "xyes"; then
  CFLAGS="$CFLAGS -Wall -Wextra \
	-Wstrict-prototypes -Wmissing-prototypes \
	-Wcast-qual -Wcast-align -Wpointer-arith \
	-Wnested-externs"
fi
]

dnl Check for options
AC_ARG_ENABLE(server,
	AC_HELP_STRING([--enable-server],       
			[build userd server (default=no)]),
		build_server=yes, build_server=no)
AC_MSG_CHECKING(if userd should be built)
if test "x$build_server" = xyes; then
	AC_MSG_RESULT(yes)
else
	AC_MSG_RESULT(no)
fi
AC_SUBST(build_server)

AC_ARG_ENABLE(client,
	AC_HELP_STRING([--enable-client],       
			[build userclt command line client (default=no)]),
		build_client=yes, build_client=no)
AC_MSG_CHECKING(if userclt command line client should be built)
if test "x$build_client" = xyes; then
	AC_MSG_RESULT(yes)
else
	AC_MSG_RESULT(no)
fi
AC_SUBST(build_client)

dnl AC_ARG_ENABLE(html-doc, 
dnl 	AC_HELP_STRING([--enable-html-doc],
dnl 		[create and install html documentation (default=no)]),
dnl 		html_doc=$enableval, html_doc=no)
dnl AC_MSG_CHECKING(if html documentation should be created)
dnl if test "x$html_doc" = xyes; then
dnl 	AC_MSG_RESULT(yes)
dnl else
dnl 	AC_MSG_RESULT(no)
dnl fi
dnl AC_SUBST(html_doc)

dnl Check for dependencies
if test -z "$PKG_CONFIG"; then
  PKG_CONFIG=pkg-config
fi
AC_SUBST(PKG_CONFIG)

AC_MSG_CHECKING(that pkg-config runs)
if "$PKG_CONFIG" --version > /dev/null 2>&1 ; then
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
  AC_MSG_ERROR([*** $PKG_CONFIG missing ***

\'$PKG_CONFIG --version\' failed to run - make sure it is inside one of the
directories in your PATH environment variable!

pkg-config comes with the developement packages for GTK+-2.2, available at:

    http://www.gtk.org])
fi


AC_DEFUN(BUILD_DEPENDS, [
AC_MSG_CHECKING(that $1 (version >= $2) is installed)
if "$PKG_CONFIG" --atleast-version=$2 $1 ; then
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
  if "$PKG_CONFIG" --exists $1 ; then
    ERRSTR=`"$PKG_CONFIG"  --modversion $1`
    AC_MSG_ERROR(Current version is only $ERRSTR)
  else
    AC_MSG_ERROR(Package is not installed)
  fi
fi
])

BUILD_DEPENDS(clip, 1.2.9)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(clip/clip.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
#man/Makefile doc/Makefile)
